[package]
name        = "lotus_led"
version     = "2.0.0"
edition     = "2024"
description = "BLE controller library for BLEDOM / Lotus Lantern LED strips"
license     = "MIT"

[lib]
name = "lotus_led"
path = "src/lib.rs"

[[bin]]
name              = "led"
path              = "src/bin/led.rs"
required-features = ["ble"]

[[bin]]
name              = "led_app"
path              = "src/bin/led_app.rs"
required-features = ["ble", "gui"]

[dependencies]
# async runtime
tokio    = { version = "1",  features = ["rt-multi-thread", "time", "sync", "macros"] }
futures  = "0.3"

# BLE (feature-gated so the lib core builds without it)
btleplug = { version = "0.11", optional = true }
uuid     = "1"

# config + serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# error handling
anyhow    = "1"
thiserror = "2"
ctrlc     = { version = "3", features = ["termination"] }

# optional: audio reactive mode
cpal        = { version = "0.15", optional = true }
# optional: screen capture (Ambilight)
screenshots = { version = "0.8",  optional = true }
# optional: system monitoring
sysinfo     = { version = "0.33", optional = true }

# optional: GUI web server
axum        = { version = "0.7",  features = ["ws"], optional = true }
tower-http  = { version = "0.5",  features = ["cors", "set-header"], optional = true }
tokio-tungstenite = { version = "0.21", optional = true }

[features]
default = ["ble"]
ble     = ["dep:btleplug"]
audio   = ["dep:cpal"]
ambient = ["dep:screenshots"]
system  = ["dep:sysinfo"]
full    = ["ble", "audio", "ambient", "system"]
gui     = ["ble", "dep:axum", "dep:tower-http", "dep:tokio-tungstenite"]

[profile.release]
opt-level = 3
lto       = true
